--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "https://homesystems.link"
+base_url = "https://test-site.homesystems.link"
 theme = "after-dark"
 
 # Whether to automatically compile all Sass files in the sass directory
